samples/_failures_safe/1761285432_35f9ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_852c4ad5.c: In function ‘main’:
./samples/SAFE/__tmp_852c4ad5.c:219:12: error: missing terminating " character
  219 |     printf("Enter expression to tokenize:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_852c4ad5.c:219:5: error: expected expression at end of input
  219 |     printf("Enter expression to tokenize:
      |     ^~~~~~
./samples/SAFE/__tmp_852c4ad5.c:219:5: error: expected declaration or statement at end of input
